<resources>
    <string name="app_name">Bisect</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="main_new_button">New</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="bisect">Bisect</string>
    <string name="bin_search">Binary search</string>
    <string name="create_bisect">Create bisect</string>
</resources>
